# skibidi

./: .gitignore  README.md  dockerfile  pyproject.toml
skibidi/: __init__.py  __main__.py  entrypoint.py  toilet.py
