[project]
name = "skibidi"
version = "0.1.0"
description = "A playful Python library and CLI that sings the Skibidi Toilet song"
authors = [
    {name = "Desanterre",email = "desanterre@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.1.0,<15.0.0)",
    "fastapi (>=0.116.1,<0.117.0)"
]

[tool.poetry.scripts]
skibidi = "skibidi.toilet:rizz"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
